2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DefaultKeyedValue.java:
    (DefaultKeyedValue): Don't allow null key,
    (equals): Simplified to reflect that this.key is never null.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java:
    Updated various method to use fireChangeEvent(),
    * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java:
    (setBlockWidth): Use fireChangeEvent(),
    (setBlockHeight): Likewise,
    (setBlockAnchor): Likewise,
    (setPaintScale): Likewise,
    (drawItem): Added code to collect entity information.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (equals): Updated for labelLinkStyle field.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1891849 by Martin Hilpert:
    * source/org/jfree/chart/plot/PieLabelLinkStyle.java: New file,
    * source/org/jfree/chart/plot/PiePlot.java
    (labelLinkStyle): New field,
    (getLabelLinkStyle): New method,
    (setLabelLinkStyle): Likewise,
    (drawLeftLabel): Added support for labelLinkStyle field,
    (drawRightLabel): Likewise.
    
2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PieLabelDistributor.java
    (distributeLabels): Comment out adjustInwards() until it is working,
    (adjustDownwards): Fix check for lower bound,
    (adjustUpwards): Fix check for upper bound,
    (distributeEvenly): Allow overlapping rather than exceeding bounds.
    
2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (drawLeftLabels): Adjust label area for interiorGap,
    (drawRightLabels): Likewise.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/HighLowItemLabelGenerator.java:
    (hashCode): Implemented,