@@ -199,6 +199,8 @@
  * 04-Jan-2008 : Fix for quadrant painting error - see patch 1849564 (DG);
  * 25-Mar-2008 : Added new methods with optional notification - see patch
  *               1913751 (DG);
+ * 07-Apr-2008 : Fixed NPE in removeDomainMarker() and 
+ *               removeRangeMarker() (DG);
  * 
  */
 
@@ -2288,6 +2290,9 @@ public class XYPlot extends Plot implements ValueAxisPlot, Zoomable,
             markers = (ArrayList) this.backgroundDomainMarkers.get(new Integer(
                     index));
         }
+        if (markers == null) {
+            return false;
+        }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
             fireChangeEvent();
@@ -2524,7 +2529,9 @@ public class XYPlot extends Plot implements ValueAxisPlot, Zoomable,
             markers = (ArrayList) this.backgroundRangeMarkers.get(new Integer(
                     index));
         }
-
+        if (markers == null) {
+            return false;
+        }
         boolean removed = markers.remove(marker);
         if (removed && notify) {
             fireChangeEvent();
